--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
     <section id="promo">
       <h1>Promoción</h1>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates id non praesentium ipsum nihil fugiat distinctio reprehenderit qui eligendi, deleniti unde! Facilis ipsa, eveniet voluptatibus maiores fugit veniam commodi laboriosam.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates id non praesentium ipsum nihil fugiat
+        distinctio reprehenderit qui eligendi, deleniti unde! Facilis ipsa, eveniet voluptatibus maiores fugit veniam
+        commodi laboriosam.
       </p>
       <button id="ver-productos">Ver productos</button>
     </section>
@@ -60,11 +62,77 @@
         <button id="ver-producto">Ver producto</button>
       </div>
 
-    </section>  
+    </section>
+
+    <h1>Consolas de videojuegos</h1>
+
+    <section id="consolas">
+      <img src="./img/consola-1.png" alt="img consola 1">
+      <h3>Control XYZ</h3>
+      <p>$ 60,00</p>
+      <button id="ver-producto">Ver producto</button>
+    </section>
+
+    <h1>Logos</h1>
+
+    <section id="consolas">
+      <img src="./img/logo-1.png" alt="img consola 1">
+      <h3>logo 1</h3>
+      <p>$ 60,00</p>
+      <button id="ver-producto">Ver producto</button>
+    </section>
 
   </main>
 
   <footer id="contac">
+
+    <img src="./asset/icon/logo.png" alt="logo">
+
+    <h2>Tienda virtual</h2>
+
+    <div class="redes">
+      <h2>Redes sociales</h2>
+
+      <a href="https://www.linkedin.com/in/luis-angel-ponce-alvarez-848826242/" target="_blank">
+        <i class="fa-brands fa-linkedin linkedin"></i>
+      </a>
+
+      <a href="https://github.com/luisangelponcealvarez/" target="_blank">
+        <i class="fa-brands fa-github github"></i>
+      </a>
+
+      <a href="https://www.instagram.com/poncealvarezluisangel/" target="_blank">
+        <i class="fa-brands fa-instagram instagram"></i>
+      </a>
+
+      <a href="https://www.facebook.com/luisangel.poncealvarez.37" target="_blank">
+        <i class="fa-brands fa-facebook facebook"></i>
+      </a>
+
+      <a href="https://twitter.com/Luisang01161226" target="_blank">
+        <i class="fa-brands fa-twitter twitter"></i>
+      </a>
+
+      <a href="https://open.spotify.com/user/nhf5pz5g4wdgjk0bvw2fzhakd?si=1ff6fa2155254f25" target="_blank">
+        <i class="fa-brands fa-spotify spotify"></i>
+      </a>
+      
+    </div>
+
+    <div class="form">
+      <form action="">
+        <input type="text">
+        <textarea name="" id=""></textarea>
+        <button id="enviar">Enviar mensaje</button>
+      </form>
+    </div>
+
+    <div class="copyright">
+      <p>
+        Desarrollado por luis angel ponce alvarez 2023
+      </p>
+    </div>
+
   </footer>
 
 </body>
