agrego configuración del nav

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -32,6 +32,7 @@
         <i class="fa-solid fa-magnifying-glass"></i>
       </button>
     </div>
+    
     <div class="login">
       <button id="btnlogin">Login</button>
     </div>
@@ -39,7 +40,6 @@
   </header>
 
   <main id="container-main">
-
     <section id="promo">
       <h1>Promoción</h1>
       <p>
@@ -64,18 +64,20 @@
 
     </section>
 
-    <h1>Consolas de videojuegos</h1>
-
     <section id="consolas">
+
+      <h1>Consolas de videojuegos</h1>
+
       <img src="./img/consola-1.png" alt="img consola 1">
       <h3>Control XYZ</h3>
       <p>$ 60,00</p>
       <button id="ver-producto">Ver producto</button>
     </section>
 
-    <h1>Logos</h1>
-
     <section id="consolas">
+
+      <h1>Logos</h1>
+
       <img src="./img/logo-1.png" alt="img consola 1">
       <h3>logo 1</h3>
       <p>$ 60,00</p>
@@ -116,7 +118,7 @@
       <a href="https://open.spotify.com/user/nhf5pz5g4wdgjk0bvw2fzhakd?si=1ff6fa2155254f25" target="_blank">
         <i class="fa-brands fa-spotify spotify"></i>
       </a>
-      
+
     </div>
 
     <div class="form">
