--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
   <header id="container-header">
 
-    <img src="./asset/icon/logo.png" alt="logo">
+    <a href="#">
+      <img src="./asset/icon/logo.png" alt="logo">
+    </a>
 
     <h1>Tienda virtual</h1>
 
@@ -32,7 +34,7 @@
         <i class="fa-solid fa-magnifying-glass"></i>
       </button>
     </div>
-    
+
     <div class="login">
       <button id="btnlogin">Login</button>
     </div>
@@ -41,13 +43,15 @@
 
   <main id="container-main">
     <section id="promo">
-      <h1>Promoción</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates id non praesentium ipsum nihil fugiat
-        distinctio reprehenderit qui eligendi, deleniti unde! Facilis ipsa, eveniet voluptatibus maiores fugit veniam
-        commodi laboriosam.
-      </p>
-      <button id="ver-productos">Ver productos</button>
+      <div class="container-text">
+        <h1>Promoción</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates id non praesentium ipsum nihil fugiat
+          distinctio reprehenderit qui eligendi, deleniti unde! Facilis ipsa, eveniet voluptatibus maiores fugit veniam
+          commodi laboriosam.
+        </p>
+        <button class="ver-productos">Ver productos</button>
+      </div>
     </section>
 
     <section id="sitios-web">
@@ -59,7 +63,7 @@
         <img src="./img/producto-1.png" alt="producto img">
         <h3>Producto XYZ</h3>
         <p>$ 60,00</p>
-        <button id="ver-producto">Ver producto</button>
+        <button class="ver-producto">Ver producto</button>
       </div>
 
     </section>
@@ -71,7 +75,7 @@
       <img src="./img/consola-1.png" alt="img consola 1">
       <h3>Control XYZ</h3>
       <p>$ 60,00</p>
-      <button id="ver-producto">Ver producto</button>
+      <button class="ver-producto">Ver producto</button>
     </section>
 
     <section id="consolas">
@@ -81,7 +85,7 @@
       <img src="./img/logo-1.png" alt="img consola 1">
       <h3>logo 1</h3>
       <p>$ 60,00</p>
-      <button id="ver-producto">Ver producto</button>
+      <button class="ver-producto">Ver producto</button>
     </section>
 
   </main>
