--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   </header>
 
   <main id="container-main">
+
     <section id="promo">
-      <div class="container-text">
         <h1>Promoción</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates id non praesentium ipsum nihil fugiat
@@ -51,41 +51,53 @@
           commodi laboriosam.
         </p>
         <button class="ver-productos">Ver productos</button>
-      </div>
     </section>
 
-    <section id="sitios-web">
-      <h1>Sitios web</h1>
+    <section id="container">
 
-      <button id="ver-productos">Ver todo</button>
+      <section id="sitios-web">
+        <h1>Sitios web</h1>
 
-      <div class="producto">
-        <img src="./img/producto-1.png" alt="producto img">
-        <h3>Producto XYZ</h3>
-        <p>$ 60,00</p>
-        <button class="ver-producto">Ver producto</button>
-      </div>
+        <a href="#" class="verTodo">ver todo<i class="fa-solid fa-arrow-right"></i></a>
 
-    </section>
+        <div class="producto">
+          <img src="./img/producto-1.png" alt="producto img">
+          <h3>Producto XYZ</h3>
+          <p>$ 60,00</p>
+          <a href="#" class="verProducto">Ver producto</a>
+        </div>
 
-    <section id="consolas">
+      </section>
 
-      <h1>Consolas de videojuegos</h1>
+      <section id="consolas">
 
-      <img src="./img/consola-1.png" alt="img consola 1">
-      <h3>Control XYZ</h3>
-      <p>$ 60,00</p>
-      <button class="ver-producto">Ver producto</button>
-    </section>
+        <h1>Consolas de videojuegos</h1>
 
-    <section id="consolas">
+        <a href="#" class="verTodo">ver todo<i class="fa-solid fa-arrow-right"></i></a>
 
-      <h1>Logos</h1>
+        <div class="producto">
+          <img src="./img/consola-1.png" alt="img consola 1">
+          <h3>Control XYZ</h3>
+          <p>$ 60,00</p>
+          <a href="#" class="verProducto">Ver producto</a>
+        </div>
+      </section>
 
-      <img src="./img/logo-1.png" alt="img consola 1">
-      <h3>logo 1</h3>
-      <p>$ 60,00</p>
-      <button class="ver-producto">Ver producto</button>
+      <section id="logos">
+
+        <h1>Logos</h1>
+
+        <a href="#" class="verTodo">ver todo<i class="fa-solid fa-arrow-right"></i></a>
+
+        <div class="producto">
+          <img src="./img/logo-1.png" alt="img consola 1">
+          <h3>logo 1</h3>
+          <p>$ 60,00</p>
+          <a href="#" class="verProducto">Ver producto</a>
+        </div>
+
+      </section>
+
     </section>
 
   </main>
