termino la parte de destop

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- style -->
   <link rel="stylesheet" href="./asset/css/style.css">
   <!-- celular -->
-  <link rel="stylesheet" href="./asset/css/celular.css" media="(max-width: 800px)">
+  <link rel="stylesheet" href="./asset/css/celular.css" media="(max-width: 860px)">
   <!-- link de fontawesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
@@ -44,13 +44,13 @@
   <main id="container-main">
 
     <section id="promo">
-        <h1>Promoción</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates id non praesentium ipsum nihil fugiat
-          distinctio reprehenderit qui eligendi, deleniti unde! Facilis ipsa, eveniet voluptatibus maiores fugit veniam
-          commodi laboriosam.
-        </p>
-        <button class="ver-productos">Ver productos</button>
+      <h1>Promoción</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates id non praesentium ipsum nihil fugiat
+        distinctio reprehenderit qui eligendi, deleniti unde! Facilis ipsa, eveniet voluptatibus maiores fugit veniam
+        commodi laboriosam.
+      </p>
+      <button class="ver-productos">Ver productos</button>
     </section>
 
     <section id="container">
@@ -59,6 +59,20 @@
         <h1>Sitios web</h1>
 
         <a href="#" class="verTodo">ver todo<i class="fa-solid fa-arrow-right"></i></a>
+
+        <div class="producto">
+          <img src="./img/producto-1.png" alt="producto img">
+          <h3>Producto XYZ</h3>
+          <p>$ 60,00</p>
+          <a href="#" class="verProducto">Ver producto</a>
+        </div>
+
+        <div class="producto">
+          <img src="./img/producto-1.png" alt="producto img">
+          <h3>Producto XYZ</h3>
+          <p>$ 60,00</p>
+          <a href="#" class="verProducto">Ver producto</a>
+        </div>
 
         <div class="producto">
           <img src="./img/producto-1.png" alt="producto img">
@@ -81,13 +95,42 @@
           <p>$ 60,00</p>
           <a href="#" class="verProducto">Ver producto</a>
         </div>
-      </section>
+
+        <div class="producto">
+          <img src="./img/consola-1.png" alt="img consola 1">
+          <h3>Control XYZ</h3>
+          <p>$ 60,00</p>
+          <a href="#" class="verProducto">Ver producto</a>
+        </div>
+
+        <div class="producto">
+          <img src="./img/consola-1.png" alt="img consola 1">
+          <h3>Control XYZ</h3>
+          <p>$ 60,00</p>
+          <a href="#" class="verProducto">Ver producto</a>
+        </div>
+
+     </section>
 
       <section id="logos">
 
         <h1>Logos</h1>
 
         <a href="#" class="verTodo">ver todo<i class="fa-solid fa-arrow-right"></i></a>
+
+        <div class="producto">
+          <img src="./img/logo-1.png" alt="img consola 1">
+          <h3>logo 1</h3>
+          <p>$ 60,00</p>
+          <a href="#" class="verProducto">Ver producto</a>
+        </div>
+
+        <div class="producto">
+          <img src="./img/logo-1.png" alt="img consola 1">
+          <h3>logo 1</h3>
+          <p>$ 60,00</p>
+          <a href="#" class="verProducto">Ver producto</a>
+        </div>
 
         <div class="producto">
           <img src="./img/logo-1.png" alt="img consola 1">
@@ -104,51 +147,51 @@
 
   <footer id="contac">
 
-    <img src="./asset/icon/logo.png" alt="logo">
+    <div class="containerFooter">
 
-    <h2>Tienda virtual</h2>
+      <div class="redes">
+        <h2>Redes sociales</h2>
 
-    <div class="redes">
-      <h2>Redes sociales</h2>
+        <a href="https://www.linkedin.com/in/luis-angel-ponce-alvarez-848826242/" target="_blank">
+          <i class="fa-brands fa-linkedin linkedin"></i>
+        </a>
 
-      <a href="https://www.linkedin.com/in/luis-angel-ponce-alvarez-848826242/" target="_blank">
-        <i class="fa-brands fa-linkedin linkedin"></i>
-      </a>
+        <a href="https://github.com/luisangelponcealvarez/" target="_blank">
+          <i class="fa-brands fa-github github"></i>
+        </a>
 
-      <a href="https://github.com/luisangelponcealvarez/" target="_blank">
-        <i class="fa-brands fa-github github"></i>
-      </a>
+        <a href="https://www.instagram.com/poncealvarezluisangel/" target="_blank">
+          <i class="fa-brands fa-instagram instagram"></i>
+        </a>
 
-      <a href="https://www.instagram.com/poncealvarezluisangel/" target="_blank">
-        <i class="fa-brands fa-instagram instagram"></i>
-      </a>
+        <a href="https://www.facebook.com/luisangel.poncealvarez.37" target="_blank">
+          <i class="fa-brands fa-facebook facebook"></i>
+        </a>
 
-      <a href="https://www.facebook.com/luisangel.poncealvarez.37" target="_blank">
-        <i class="fa-brands fa-facebook facebook"></i>
-      </a>
+        <a href="https://twitter.com/Luisang01161226" target="_blank">
+          <i class="fa-brands fa-twitter twitter"></i>
+        </a>
 
-      <a href="https://twitter.com/Luisang01161226" target="_blank">
-        <i class="fa-brands fa-twitter twitter"></i>
-      </a>
+        <a href="https://open.spotify.com/user/nhf5pz5g4wdgjk0bvw2fzhakd?si=1ff6fa2155254f25" target="_blank">
+          <i class="fa-brands fa-spotify spotify"></i>
+        </a>
 
-      <a href="https://open.spotify.com/user/nhf5pz5g4wdgjk0bvw2fzhakd?si=1ff6fa2155254f25" target="_blank">
-        <i class="fa-brands fa-spotify spotify"></i>
-      </a>
+      </div>
 
-    </div>
+      <div class="form">
+        <form action="" class="containerForm">
+          <input type="text" class="nombre" placeholder="Nombre">
+          <textarea name="" id="" class="mensaje" placeholder="Escribe tu mensaje"></textarea>
+          <button id="enviar">Enviar mensaje</button>
+        </form>
+      </div>
 
-    <div class="form">
-      <form action="">
-        <input type="text">
-        <textarea name="" id=""></textarea>
-        <button id="enviar">Enviar mensaje</button>
-      </form>
     </div>
 
     <div class="copyright">
-      <p>
-        Desarrollado por luis angel ponce alvarez 2023
-      </p>
+      <h2>
+        Copyright © | Coded with by LUIS ANGEL PONCE ALVAREZ
+      </h2>
     </div>
 
   </footer>
