agrego de configuración de celular

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- style -->
   <link rel="stylesheet" href="./asset/css/style.css">
   <!-- celular -->
-  <link rel="stylesheet" href="./asset/css/celular.css" media="(max-width: 860px)">
+  <link rel="stylesheet" href="./asset/css/celular.css" media="(max-width: 900px)">
   <!-- link de fontawesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
@@ -56,9 +56,12 @@
     <section id="container">
 
       <section id="sitios-web">
-        <h1>Sitios web</h1>
+        <div class="text">
+          <h1>Sitios web</h1>
 
-        <a href="#" class="verTodo">ver todo<i class="fa-solid fa-arrow-right"></i></a>
+          <a href="#" class="verTodo">ver todo<i class="fa-solid fa-arrow-right"></i></a>
+
+        </div>
 
         <div class="producto">
           <img src="./img/producto-1.png" alt="producto img">
@@ -84,16 +87,11 @@
       </section>
 
       <section id="consolas">
+        <div class="text">
+          <h1>Consolas de videojuegos</h1>
 
-        <h1>Consolas de videojuegos</h1>
+          <a href="#" class="verTodo">ver todo<i class="fa-solid fa-arrow-right"></i></a>
 
-        <a href="#" class="verTodo">ver todo<i class="fa-solid fa-arrow-right"></i></a>
-
-        <div class="producto">
-          <img src="./img/consola-1.png" alt="img consola 1">
-          <h3>Control XYZ</h3>
-          <p>$ 60,00</p>
-          <a href="#" class="verProducto">Ver producto</a>
         </div>
 
         <div class="producto">
@@ -110,14 +108,23 @@
           <a href="#" class="verProducto">Ver producto</a>
         </div>
 
-     </section>
+        <div class="producto">
+          <img src="./img/consola-1.png" alt="img consola 1">
+          <h3>Control XYZ</h3>
+          <p>$ 60,00</p>
+          <a href="#" class="verProducto">Ver producto</a>
+        </div>
+
+      </section>
 
       <section id="logos">
+        <div class="text">
+        
+          <h1>Logos</h1>
 
-        <h1>Logos</h1>
+          <a href="#" class="verTodo">ver todo<i class="fa-solid fa-arrow-right"></i></a>
 
-        <a href="#" class="verTodo">ver todo<i class="fa-solid fa-arrow-right"></i></a>
-
+        </div>
         <div class="producto">
           <img src="./img/logo-1.png" alt="img consola 1">
           <h3>logo 1</h3>
